name:                dogs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dogs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Entities
                    ,  EntityEnums
  build-depends:       base >= 4.7 && < 5
                    ,  time
                    ,  text
                    ,  aeson
                    ,  persistent
                    ,  persistent-postgresql
                    ,  persistent-template
  default-language:    Haskell2010

executable dogs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dogs
                     ,  text
                     ,  HDBC
                     ,  HDBC-postgresql
                     ,  aeson
                     ,  warp
                     ,  wai
                     ,  http-types
                     ,  persistent
                     ,  persistent-postgresql
                     ,  time
                     ,  monad-logger
                     ,  persistent-template
                     ,  scotty
  default-language:    Haskell2010

executable dogs-term
    hs-source-dirs:      app
    main-is:             TermMain.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , dogs
                       ,  text
                       ,  ncurses
                       ,  haskeline
                       ,  persistent
                       ,  persistent-postgresql
                       ,  time
                       ,  monad-logger
                       ,  persistent-template
                       ,  resource-pool
    default-language:    Haskell2010

test-suite dogs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dogs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dogs
